Moving the progress bar percentage value slightly to the right so it does not look out of place when optimization is started. Fixing a display issue for the progress bar percentage value at screen widths 782px and below where it overlapped other content and normalized the top padding of the optimization rows. Also combined duplicate CSS rules into one.

--- a/assets/css/bulk.css
+++ b/assets/css/bulk.css
@@ -88,7 +88,7 @@ body[class*="_imagify-ngg-bulk-optimization"] .media-item .progress {
 body[class*="_imagify-ngg-bulk-optimization"] .media-item .percent {
 	position: absolute;
 	top: 6px;
-	right: 0;
+	right: -26px;
 	text-shadow: none;
 	width: auto;
 	padding: 0 5px;
@@ -669,11 +669,16 @@ body[class*="_imagify-ngg-bulk-optimization"] .media-item .progress .bar {
 	background: #FFF;
 }
 
-.imagify-bulk-table .imagify-row-progress {
-	display: none;
+@media (max-width: 782px) {
+	.imagify-row-folder-type,
+	tr.imagify-row-working,
+	tr.imagify-row-waiting {
+		padding-top: 20px;
+	}
 }
 
 .imagify-bulk-table .imagify-row-progress {
+	display: none;
 	height: 8px;
 	padding: 0;
 }
